# gallus-engine

./: .gitignore  CMakeLists.txt  CoopScoop.sln  GenerateProjectFiles.bat
Engine/: Engine.vcxproj  Engine.vcxproj.filters  main.cpp
Engine/include/assets/: AssetType.h
Engine/include/core/: Data.h  DataStream.h  Engine.h  FileUtils.h  MemoryInfo.h  System.h  utils.h
Engine/include/core/input/: InputSystem.h
Engine/include/core/logger/: Logger.h
Engine/include/editor/: AssetDatabase.h  Editor.h  EditorSettings.h
Engine/include/editor/explorer_resources/: SceneExplorerResource.h
Engine/include/editor/imgui/: ImGuiDefines.h  ImGuiWindow.h
Engine/include/engine/: Engine.h  System.h
Engine/include/engine/logger/: Logger.h
Engine/include/graphics/dx12/: Adapter.h  Buffer.h  Camera.h  CommandList.h  CommandQueue.h  DX12PCH.h  DX12Resource.h  DX12System.h  DescriptorAllocation.h  DescriptorAllocator.h  DescriptorAllocatorPage.h  HeapAllocation.h  IndexBuffer.h  Light.h  Material.h  Mesh.h  MeshComponent.h  ResourceAtlas.h  Shader.h  Texture.h  TextureAtlas.h  TextureUsage.h  Transform.h
Engine/include/graphics/win32/: Window.h
Engine/include/utils/: string_extensions.h
Engine/resources/: chicken.gltf
Engine/src/core/: Data.cpp  DataStream.cpp  Engine.cpp  FileUtils.cpp  System.cpp
Engine/src/core/input/: InputSystem.cpp
Engine/src/core/logger/: Logger.cpp
Engine/src/editor/: AssetDatabase.cpp  Editor.cpp  EditorSettings.cpp  ExplorerResource.cpp
Engine/src/editor/explorer_resources/: AudioExplorerResource.cpp  SceneExplorerResource.cpp
Engine/src/editor/imgui/: ImGuiDefines.cpp  ImGuiWindow.cpp
Engine/src/engine/: Engine.cpp  System.cpp
Engine/src/engine/logger/: Logger.cpp
Engine/src/graphics/dx12/: Adapter.cpp  Buffer.cpp  Camera.cpp  CommandList.cpp  CommandQueue.cpp  DX12Resource.cpp  DX12System.cpp  DesciptorAllocatorPage.cpp  DescriptorAllocation.cpp  DescriptorAllocator.cpp  HeapAllocation.cpp  Material.cpp  Mesh.cpp  MeshComponent.cpp  ResourceAtlas.cpp  Shader.cpp  Texture.cpp  TextureAtlas.cpp  Transform.cpp  VertexBuffer.cpp
Engine/src/graphics/win32/: Window.cpp
Engine/x64/Debug/: Engine.exe.recipe  Engine.ilk  vc143.idb
Engine/x64/Debug/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/models/: chicken.gltf  mod_chicken.glb  mod_missing.glb
assets/shaders/: albedo_pixelshader.hlsl  color_vertexshader.hlsl
editor/include/editor/: AssetDatabase.h  Editor.h  EditorSettings.h  ExplorerResource.h
editor/include/editor/explorer_resources/: AudioExplorerResource.h  SceneExplorerResource.h
editor/include/editor/imgui/: ImGuiDefines.h  ImGuiWindow.h  font_icon.h
editor/src/editor/: AssetDatabase.cpp  Editor.cpp  EditorSettings.cpp  ExplorerResource.cpp
editor/src/editor/explorer_resources/: AudioExplorerResource.cpp  SceneExplorerResource.cpp
editor/src/editor/imgui/: ImGuiDefines.cpp  ImGuiWindow.cpp
engine/include/: Resource.rc
engine/include/assets/: AssetType.h
engine/include/core/: Data.h  DataStream.h  Engine.h  Event.h  FileUtils.h  MemoryInfo.h  ReserveDataStream.h  System.h
engine/include/core/input/: InputSystem.h
engine/include/core/logger/: Logger.h
engine/include/gameplay/: ECSBaseSystem.h  EntityComponentSystem.h  EntityID.h
engine/include/gameplay/systems/: EntityInfoSystem.h  MeshSystem.h  TransformSystem.h
engine/include/graphics/dx12/: Buffer.h  Camera.h  CommandList.h  CommandQueue.h  DX12Resource.h  DX12System.h  DxMath.h  HeapAllocation.h  IndexBuffer.h  Light.h  Material.h  Mesh.h  MeshComponent.h  ResourceAtlas.h  Shader.h  Texture.h  Transform.h  VertexBuffer.h
engine/include/graphics/win32/: Window.h
engine/include/utils/: string_extensions.h
engine/src/: main.cpp
engine/src/core/: Data.cpp  DataStream.cpp  Engine.cpp  FileUtils.cpp  ReserveDataStream.cpp  System.cpp
engine/src/core/input/: InputSystem.cpp
engine/src/core/logger/: Logger.cpp
engine/src/gameplay/systems/: EntityComponentSystem.cpp  EntityInfoSystem.cpp  MeshSystem.cpp  TransformSystem.cpp
engine/src/graphics/dx12/: Buffer.cpp  Camera.cpp  CommandList.cpp  CommandQueue.cpp  DX12Resource.cpp  DX12System.cpp  HeapAllocation.cpp  IndexBuffer.cpp  Light.cpp  Material.cpp  Mesh.cpp  MeshComponent.cpp  ResourceAtlas.cpp  Shader.cpp  Texture.cpp  Transform.cpp  VertexBuffer.cpp
engine/src/graphics/win32/: Window.cpp
engine/src/utils/: string_extensions.cpp
include/core/: System.h
include/core/input/: InputSystem.h
include/editor/: AssetDatabase.h  EditorSettings.h  ExplorerResource.h
include/editor/explorer_resources/: AudioExplorerResource.h
include/editor/imgui/: ImGuiWindow.h  font_icon.h
include/editor/imgui/windows/: BaseWindow.h  ConsoleWindow.h  ExplorerWindow.h  HierarchyWindow.h  InspectorWindow.h  LoadProjectWindow.h  MainWindow.h  ProjectSettingsWindow.h
include/graphics/dx12/: Material.h  Shader.h  VertexBuffer.h
shaders/: albedo_vertexshader.hlsl  color_pixelshader.hlsl
src/: main.cpp
src/core/: System.cpp
src/editor/: AssetDatabase.cpp  Editor.cpp  ExplorerResource.cpp
src/editor/imgui/: ImGuiWindow.cpp
src/editor/imgui/views/: ImGuiUIView.cpp
src/editor/imgui/windows/: BaseWindow.cpp  ExplorerWindow.cpp  HierarchyWindow.cpp  InspectorWindow.cpp  LoadProjectWindow.cpp  ProjectSettingsWindow.cpp  SceneWindow.cpp
src/graphics/dx12/: Camera.cpp  CommandList.cpp  DX12Resource.cpp  DX12System.cpp  HeapAllocation.cpp  IndexBuffer.cpp  Light.cpp  Material.cpp  Texture.cpp
src/graphics/win32/: Window.cpp
tools/: CMakeLists.txt
tools/font-embedder/: generate-font-from-svg.js  generate-font-header.bat  generate-font-header.js  generate-header-from-font.js  generate-html-from-font.js  generate-icon-font.bat  generate-icon-font.js  generate-svg.js  package.json
tools/include/: FontEmbedderWindow.h  SimpleImGuiWindow.h
tools/src/: FontEmbedderWindow.cpp  SimpleImGuiWindow.cpp  main.cpp
(+119 files in other folders)
